--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vercel/postgres": "^0.10.0",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "jose": "^5.9.6",
     "next": "15.1.3",
     "react": "^19.0.0",
